# i3-eww

./: Cargo.toml  README.md
src/: main.rs
